jena-core-ont-tests: more ClassSubClassesTest's, other changes